again tested all the market after implementing Binary encoding, LMAX Disruptor, Aeron, FIX protocol